--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-info p-5">
+    <footer class="border-top footer text-muted bg-info p-2 fixed-bottom">
         <div class="container text-light">
             &copy; 2024 - PROGETTO_SETTIMINALE_BE_S2_L5__Vescio_Pia_Francesca - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-white">Privacy</a>
         </div>
